discussion/kv_engine/183329/183329_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add QuotaSharingItemPager

Added a new subclass of ItemPager which evicts items from a set of
buckets and stops eviction when sum(mem_used) < sum(low_wat).

Changed the ItemPager factory method to return an instance of the
QuotaSharingItemPager which is shared between quota sharing
configurations.

The QuotaSharingItemPager's schedulePagingVisitors implementation uses
the CrossBucketVisitorAdapter to schedule paging visitors for all
buckets sharing HT quotas.

The adapter round-robins which bucket's paging visitor gets to run.
This is done to avoid evicting more items from buckets which have more
items resident below the MFU eviction threshold (HTs more densely
populated with such items, which would be faster to evict from if we
were just running the visitors concurrently without syncronisation).

Change-Id: I5c285db14e438cf159cde181de91b838549b706a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-12-14 11:50:33.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-14 13:01:55.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/944/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/944/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11905/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11905/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24228/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24228/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25507/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25507/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22188/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:251:46: error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
    std::size_t estimatedTotalMemUsed = std::accumulate(
                                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22188/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:251:46:
error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22188/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51492/ : FAILURE

Failure of GoogleTest "MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc/Metered":

<pre>
[ RUN      ] MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc/Metered
unknown file: error: C++ exception with description "Failed to create pipe for AtomicNotificationQueue9: bad file descriptor" thrown in SetUp().
[  FAILED  ] MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc/Metered, where GetParam() = 4-byte object <00-00 00-00> (6 ms)
MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc/Metered
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51492/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23745/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23745/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21774/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11995/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32647/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24643/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
